@@ -1,19 +1,47 @@
 %---------------------------------------------------------------------------%
-% Copyright (C) 1994-1998,2001 The University of Melbourne.
+% Copyright (C) 1994-1998,2001-2002 The University of Melbourne.
 % This file may only be copied under the terms of the GNU Library General
 % Public License - see the file COPYING.LIB in the Mercury distribution.
 %---------------------------------------------------------------------------%
 %
-% file: rand.m
+% file: random.m
 % main author: conway
 % stability: low
 %
 % Define a set of random number generator predicates. This implementation
-% uses a threaded random-number supply. It could be made non-unique, but
-% since each thread returns the same list of random numbers, in the interests
-% of safety, it is declared with (backtrackable) unique modes.
+% uses a threaded random-number supply.   The supply can be used in a
+% non-unique way, which means that each thread returns the same list of
+% random numbers.  However, this may not be desired so in the interests
+% of safety it is also declared with (backtrackable) unique modes.
+%
 % The coefficients used in the implementation were taken from Numerical
-% Recipes in C (Press et al), and are originally due to Knuth.
+% Recipes in C (Press et al), and are originally due to Knuth.  These
+% coefficients are described as producing a "Quick and Dirty" random number
+% generator, which generates the numbers very quickly but not necessarily
+% with a high degree of quality.  As with all random number generators,
+% the user is advised to consider carefully whether this generator meets
+% their requirements in terms of "randomness".  For applications which have
+% special needs (e.g. cryptographic key generation), a generator such as
+% this is unlikely to be suitable.
+%
+% Note that random number generators of this type have several known
+% pitfalls which the user may need to avoid:
+%
+%	1) The high bits tend to be more random than the low bits.  If
+%	you wish to generate a random integer within a given range, you
+%	should something like 'div' to reduce the random numbers to the
+%	required range rather than something like 'mod' (or just use
+%	random__random/5).
+%
+%	2) Similarly, you should not try to break a random number up into
+%	components.  Instead, you should generate each number with a
+%	separate call to this module.
+%
+%	3) There can be sequential correlation between successive calls,
+%	so you shouldn't try to generate tuples of random numbers, for
+%	example, by generating each component of the tuple in sequential
+%	order.  If you do, it is likely that the resulting sequence will
+%	not cover the full range of possible tuples.
 %
 %---------------------------------------------------------------------------%
 
@@ -38,12 +66,29 @@
 :- mode random__random(out, mdi, muo) is det.
 :- mode random__random(out, in, out) is det.
 
-	% random__randmax(RandMax, RS0, RS): binds Randax to the maximum
+	% random__random(Low, Range, Num, RS0, RS): extracts a number Num
+	% in the range Low .. (Low + Range - 1) from the random number
+	% supply RS0, and binds RS to the new state of the random number
+	% supply.  For best results, the value of Range should be no greater
+	% than about 100.
+:- pred random__random(int, int, int, random__supply, random__supply).
+:- mode random__random(in, in, out, mdi, muo) is det.
+:- mode random__random(in, in, out, in, out) is det.
+
+	% random__randmax(RandMax, RS0, RS): binds RandMax to the maximum
 	% random number that can be returned from the random number
 	% supply RS0, and returns RS = RS0.
 :- pred random__randmax(int, random__supply, random__supply).
 :- mode random__randmax(out, mdi, muo) is det.
 :- mode random__randmax(out, in, out) is det.
+
+	% random__randcount(RandCount, RS0, RS): binds RandCount to the
+	% number of distinct random numbers that can be returned from the
+	% random number supply RS0, and returns RS = RS0.  This will be one
+	% more than the number returned by randmax/3.
+:- pred random__randcount(int, random__supply, random__supply).
+:- mode random__randcount(out, mdi, muo) is det.
+:- mode random__randcount(out, in, out) is det.
 
 	% random__permutation(List0, List, RS0, RS):
 	% binds List to a random permutation of List0,
@@ -83,12 +128,27 @@ random__init(I0, RS) :-
 random__random(I, RS0, RS) :-
 	RS0 = I0,
 	random__params(A, C, M),
-	I is ((I0 * A) + C) mod M,
+	I = ((I0 * A) + C) mod M,
 	copy(I, RS).
 
-random__randmax(M1, Rs, Rs) :-
+	% We could make this more robust by checking whether the range is
+	% less than a certain threshold, and using a more sophisticated
+	% algorithm if the threshold is exceeded.  But that would defeat
+	% the purpose of having a "quick and dirty" random number generator,
+	% so we don't do that.
+random__random(Low, Range, Num) -->
+	random__random(R),
+	random__randcount(M),
+	% With our current set of parameters and a reasonable choice of Range,
+	% the following should never overflow.
+	{ Num = Low + (Range * R) // M }.
+
+random__randmax(M1, RS, RS) :-
 	random__params(_A, _C, M),
-	M1 is M - 1.
+	M1 = M - 1.
+
+random__randcount(M, RS, RS) :-
+	random__params(_A, _C, M).
 
 %---------------------------------------------------------------------------%
 
@@ -121,10 +181,7 @@ perform_sampling(I, Record0, Order0, Order, RS0, RS) :-
 		RS = RS0
 	;
 		I1 = I - 1,
-		random__random(Random, RS0, RS1),
-		% we know that Random >= 0, so it's safe to use rem
-		% rather than mod, and rem is typically more efficient
-		Index = Random rem I,
+		random__random(0, I, Index, RS0, RS1),
 		array__lookup(Record0, Index, Next),
 		array__lookup(Record0, I1, MaxImage),
 		Order1 = [Next | Order0],
@@ -148,7 +205,7 @@ random__test_2(N, Is, RS0, RS) :-
 	(
 		N > 0
 	->
-		N1 is N - 1,
+		N1 = N - 1,
 		random__random(I, RS0, RS1),
 		random__test_2(N1, Is0, RS1, RS),
 		Is = [I|Is0]
